--- a/components/crn-one-container.components.json
+++ b/components/crn-one-container.components.json
@@ -1,14 +1,16 @@
 {
-    "name": "crn-horizontal-container",
-    "text_pt_BR": "Layout horizontal",
-    "text_en_US": "Horizontal Layout",
+    "name": "crn-one-container",
+    "text_pt_BR": "1 Coluna",
+    "text_en_US": "1 Column",
     "image": "/node_modules/cronapp-framework-js/img/cron-icon/crn-vertical-container.svg",
-    "description": "Dois recipiente ao lado para inserir componentes",
-    "description_en_US": "Two container on the side for inserting components",
+    "description": "Um recipiente para inserir componentes",
+    "description_en_US": "A container for inserting components",
     "category": [
         "LAYOUTS"
     ],
-    "templateURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/grid-horizontal.template.html",
+    "templateURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/Component_Container/crn-one-container.template.html",
+    "wrapper": false,
+    "autoWrapper": true,
     "properties": {
         "class": {
             "order": 9999
@@ -37,17 +39,5 @@
             "removable": true,
             "type": "event"
         }
-    },
-    "forcedGroup": false,
-    "wrapper": false,
-    "autoWrapper": true,
-    "handleRules": {
-        "canIncrement": true,
-        "rules": [
-            {
-                "sourceHTML": "<div class=\"col-md-6\" data-container=\"true\" data-replace=\"true\">Content goes here</div> ",
-                "targetSelector": ":self"
-            }
-        ]
     }
 }
