--- a/components/crn-three-container.components.json
+++ b/components/crn-three-container.components.json
@@ -3,7 +3,7 @@
     "text_pt_BR": "3 Colunas",
     "text_en_US": "3 Columns",
     "image": "/node_modules/cronapp-framework-js/img/cron-icon/crn-vertical-container.svg",
-    "description": "Três recipiente ao lado para inserir componentes",
+    "description": "Três recipientes ao lado para inserir componentes",
     "description_en_US": "Three container on the side for inserting components",
     "category": [
         "LAYOUTS"
