--- a/components/crn-two-container.components.json
+++ b/components/crn-two-container.components.json
@@ -3,7 +3,7 @@
     "text_pt_BR": "2 Colunas",
     "text_en_US": "2 Columns",
     "image": "/node_modules/cronapp-framework-js/img/cron-icon/crn-vertical-container.svg",
-    "description": "Dois recipiente ao lado para inserir componentes",
+    "description": "Dois recipientes ao lado para inserir componentes",
     "description_en_US": "Two container on the side for inserting components",
     "category": [
         "LAYOUTS"
