CRONAPP-4423 - Criar componente Colunas (#648)
Problema:
Criar atalhos de componentes com colunas diferentes para que o usuário tenha mais agilidade na hora de criar o template.

Solução:
Melhoria nos componentes (usuário pode adicionar mais div no componente)

Layout Vertical
Layout Horizontal
Componentes criados:

1 Coluna
2 Coluna
3 Coluna
4/12 Colunas
8/12 Colunas
3/12 Colunas

--- a/components/crn-vertical-container.components.json
+++ b/components/crn-vertical-container.components.json
@@ -5,6 +5,10 @@
   "image": "/node_modules/cronapp-framework-js/img/cron-icon/crn-horizontal-container.svg",
   "description": "Dois recipiente empilhado para inserir componentes",
   "description_en_US": "Two stacked container for inserting components",
+  "category": [
+    "LAYOUTS"
+  ],
+  "templateURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/grid-vertical.template.html",
   "properties": {
     "class": {
       "order": 9999
@@ -37,12 +41,16 @@
       "type": "event"
     }
   },
-  "styles": [
-    {
-      "selector": "div#{id} div",
-      "text_pt_BR": "Geral",
-      "text_en_US": "General"
-    }
-  ],
-  "templateURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/grid-vertical.template.html"
+  "forcedGroup": true,
+  "wrapper": false,
+  "autoWrapper": true,
+  "handleRules": {
+    "canIncrement": true,
+    "rules": [
+      {
+        "sourceHTML": "<div class=\"col-md-12\" data-container=\"true\" data-replace=\"true\">Content goes here</div> ",
+        "targetSelector": ":self"
+      }
+    ]
+  }
 }
