--- a/components/crn-trhee-six-three-container.components.json
+++ b/components/crn-trhee-six-three-container.components.json
@@ -1,14 +1,14 @@
 {
-    "name": "crn-three-twelve-container",
-    "text_pt_BR": "3/12 Colunas",
-    "text_en_US": "3/12 Columns",
-    "image": "/node_modules/cronapp-framework-js/img/cron-icon/crn-three-twelve-container.svg",
+    "name": "crn-three-six-three-container",
+    "text_pt_BR": "3/6/3 Colunas",
+    "text_en_US": "3/6/3 Columns",
+    "image": "/node_modules/cronapp-framework-js/img/cron-icon/crn-three-six-three-container.svg",
     "description": "Três recipiente ao lado para inserir componentes",
     "description_en_US": "Three container on the side for inserting components",
     "category": [
         "LAYOUTS"
     ],
-    "templateURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/Component_Container/crn-three-twelve-container.template.html",
+    "templateURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/Component_Container/crn-three-six-three-container.template.html",
     "wrapper": false,
     "autoWrapper": true,
     "properties": {
