--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "justgage": "1.3.5",
     "moment": "2.9.0",
     "moment-timezone": "0.4.0",
-    "ng-file-upload": "12.2.13"
+    "ng-file-upload": "12.2.13",
+    "signature_pad": "^3.0.0-beta.4"
   }
 }
