--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "javascript"
   ],
   "devDependencies": {
+    "angular-translate": "^2.11.1",
     "babel-core": "^6.26.3",
     "babel-plugin-angularjs-annotate": "^0.10.0",
     "babel-preset-es2015": "^6.24.1",
@@ -54,7 +55,6 @@
     "angular-i18n": "1.4.5",
     "angular-resource": "1.3.15",
     "angular-sanitize": "1.3.15",
-    "angular-translate": "2.11.1",
     "angular-translate-handler-log": "2.11.1",
     "angular-translate-loader-static-files": "2.11.1",
     "angular-translate-storage-cookie": "2.11.1",
