--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "angular-i18n": "1.4.5",
     "angular-resource": "1.3.15",
     "angular-sanitize": "1.3.15",
+    "angular-timeline": "^1.7.0",
     "angular-translate": "2.11.1",
     "angular-translate-handler-log": "2.11.1",
     "angular-translate-loader-static-files": "2.11.1",
