--- a/components/crn-table.components.json
+++ b/components/crn-table.components.json
@@ -52,6 +52,7 @@
       "selector": "div[crn-datasource]",
       "displayName_pt_BR": "Configurações",
       "displayName_en_US": "Configuration",
+      "global": true,
       "type": "pageDatasource"
     },
     {
