add propriedades data e data e hora

--- a/components/crn-datepicker.components.json
+++ b/components/crn-datepicker.components.json
@@ -40,6 +40,21 @@
       "selector": "input",
       "type": "type",
       "order": 2
+    },    
+    {
+      "name": "placeholder",
+      "selector": "input",
+      "type": "text"
+    },
+    {
+      "name": "mask",
+      "selector": "input",
+      "type": "mask"
+    },
+    {
+      "name": "mask-placeholder",
+      "selector": "input",
+      "type": "text"
     },
     {
       "name": "ng-required",
