--- a/components/crn-label.components.json
+++ b/components/crn-label.components.json
@@ -2,6 +2,7 @@
   "name": "crn-span",
   "text_pt_BR": "Texto Simples",
   "text_en_US": "Simple Text",
+  "pallete": false,
   "wrapper": false,
   "image": "/node_modules/cronapp-framework-js/img/cron-icon/crn-simple-text.svg",
   "order": 10,
