CRONAPP-4634 - Voltar propriedades dos componentes Data e Data e hora

--- a/components/crn-datetimepicker.components.json
+++ b/components/crn-datetimepicker.components.json
@@ -39,6 +39,11 @@
       "mandatory": true
     },
     {
+      "name": "type",
+      "selector": "input",
+      "type": "type"
+    },
+    {
       "name": "placeholder",
       "selector": "input",
       "type": "text"
