CRONAPP-4634 - Adicionado propriedade ng-required no componente Data e Hora

--- a/components/crn-datetimepicker.components.json
+++ b/components/crn-datetimepicker.components.json
@@ -59,6 +59,11 @@
       "type": "text"
     },
     {
+      "name": "ng-required",
+      "selector": "input",
+      "type": "logic"
+    },
+    {
       "name": "ng-init",
       "selector": "input",
       "type": "event"
