--- a/components/crn-enterprise-combobox.components.json
+++ b/components/crn-enterprise-combobox.components.json
@@ -89,7 +89,17 @@
     {
       "name": "ng-required",
       "selector": "cron-select",
-      "type": "logic"
+      "type": "logic",
+      "order": 4
+    },
+    {
+      "name": "validationMessage",
+      "selector": "cron-select",
+      "displayName_pt_BR": "Texto quando requerido",
+      "displayName_en_US": "Text when required",
+      "type": "text",
+      "mandatory": false,
+      "order": 5
     },
     {
       "name": "id",
