CRONAPP-4621 - 2.8.x - Possuir mecanismos de validação reativa (#713)
* CRONAPP-4621 - Possuir mecanismos de validação reativa
**Problema**
Incluir texto da validação reativa
**Melhoria**:
Ajustes na biblioteca do KENDO e nas propriedades dos componentes para incluir a propriedade "Texto quando requerido".

--- a/components/crn-enterprise-dynamic-combobox.components.json
+++ b/components/crn-enterprise-dynamic-combobox.components.json
@@ -94,7 +94,17 @@
     {
       "name": "ng-required",
       "selector": "cron-dynamic-select",
-      "type": "logic"
+      "type": "logic",
+      "order": 4
+    },
+    {
+      "name": "validationMessage",
+      "selector": "cron-dynamic-select",
+      "displayName_pt_BR": "Texto quando requerido",
+      "displayName_en_US": "Text when required",
+      "type": "text",
+      "mandatory": false,
+      "order": 5
     },
     {
       "name": "id",
