--- a/components/crn-enterprise-combobox-multiple.components.json
+++ b/components/crn-enterprise-combobox-multiple.components.json
@@ -34,6 +34,11 @@
       "target": "class",
       "values": [
         {
+          "key": "combobox-theme",
+          "value_pt_BR": "Padrão do tema",
+          "value_en_US": "Theme pattern"
+        },
+        {
           "key": "combobox-gray",
           "value_pt_BR": "Cinza",
           "value_en_US": "Gray",
