--- a/components/crn-image.components.json
+++ b/components/crn-image.components.json
@@ -124,22 +124,22 @@
       "type": "options",
       "values": [
         {
-          "key": "object-fit: cover;",
+          "key": "object-fit-cover",
           "value_pt_BR": "Proporcional",
           "value_en_US": "Proportional"
         },
         {
-          "key": "object-fit: contain;",
+          "key": "object-fit-contain",
           "value_pt_BR": "Ajustado (padrão)",
           "value_en_US": "Adjusted (default)"
         },
         {
-          "key": "object-fit: fill;",
+          "key": "object-fit-fill",
           "value_pt_BR": "Preencher",
           "value_en_US": "Fill"
         },
         {
-          "key": "object-fit: none;",
+          "key": "object-fit-none",
           "value_pt_BR": "Nenhum",
           "value_en_US": "None"
         }
