--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "pace": "HubSpot/pace#v0.7.8",
     "raphael": "DmitryBaranovskiy/raphael#v2.1.4",
     "ui-select-infinity": "hyzhak/ui-select-infinity#v0.1.5",
-    "angular-ui-router": "@uirouter/angularjs@1.0.29",
+    "angular-ui-router": "1.0.29",
     "eonasdan-bootstrap-datetimepicker": "^4.17.49",
     "natives": "1.1.6",
     "angular": "1.8.2",
