--- a/components/crn-upload.components.json
+++ b/components/crn-upload.components.json
@@ -31,8 +31,8 @@
       "values": [
         {
           "key": "btn-default",
-          "value_pt_BR": "Padrão",
-          "value_en_US": "Default"
+          "value_pt_BR": "Padrão do tema",
+          "value_en_US": "Theme pattern"
         },
         {
           "key": "btn-primary",
