--- a/components/crn-icon.components.json
+++ b/components/crn-icon.components.json
@@ -9,8 +9,8 @@
     "LAYOUTS"
   ],  
   "templateURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/icon.template.html",
-  "wrapper": false,
-  "autoWrapper": false,
+  "wrapper": true,
+  "forcedGroup": true,
   "properties": {
     "ng-init": {
       "removable": true,
@@ -49,19 +49,22 @@
       "selector": "i",
       "displayName_pt_BR": "Ícone",
       "displayName_en_US": "Icon",
-      "type": "icon"
+      "type": "icon",
+      "order": 1
     },
     {
       "name": "icon-theme",
       "displayName_pt_BR": "Cor do ícone",
       "displayName_en_US": "Icon color",
-      "selector": "i"
+      "selector": "i",
+      "order": 2
     },
     {
       "name": "icon-size",
       "displayName_pt_BR": "Tamanho do ícone",
       "displayName_en_US": "Icon size",
-      "selector": "i"
+      "selector": "i",
+      "order": 3
     }
   ],
   "attributesForPreview": [
@@ -70,6 +73,11 @@
       "type": "options",
       "target": "class",
       "values": [
+        {
+          "key": "color-theme",
+          "value_pt_BR": "Padrão do tema",
+          "value_en_US": "Theme pattern"
+        },
         {
           "key": "color-white",
           "value_pt_BR": "Branco",
@@ -201,25 +209,25 @@
     {
       "name": "icon-size",
       "type": "options",
-      "target": "style",
+      "target": "class",
       "values": [
         {
-          "key": "",
-          "value_pt_BR": "Padrão",
-          "value_en_US": "Default"
+          "key": "font-size-theme",
+          "value_pt_BR": "Padrão do tema",
+          "value_en_US": "Theme pattern"
         },
         {
-          "key": "font-size: 47px;",
+          "key": "font-size-47",
           "value_pt_BR": "Grande",
           "value_en_US": "Big"
         },
         {
-          "key": "font-size: 30px;",
+          "key": "font-size-30",
           "value_pt_BR": "Médio",
           "value_en_US": "Medium"
         },
         {
-          "key": "font-size: 25px;",
+          "key": "font-size-25",
           "value_pt_BR": "Pequeno",
           "value_en_US": "Small"
         }
