--- a/components/crn-upload-file.components.json
+++ b/components/crn-upload-file.components.json
@@ -53,9 +53,8 @@
       "values": [
         {
           "key": "btn-default",
-          "value_pt_BR": "Padrão",
-          "value_en_US": "Default",
-          "color": "#fff"
+          "value_pt_BR": "Padrão do tema",
+          "value_en_US": "Theme pattern"
         },
         {
           "key": "btn-primary",
