--- a/package.json
+++ b/package.json
@@ -43,10 +43,10 @@
     "pace": "HubSpot/pace#v0.7.8",
     "raphael": "DmitryBaranovskiy/raphael#v2.1.4",
     "ui-select-infinity": "hyzhak/ui-select-infinity#v0.1.5",
-    "angular-ui-router": "angular-ui/ui-router#0.2.15",
+    "angular-ui-router": "1.0.29",
     "eonasdan-bootstrap-datetimepicker": "^4.17.49",
     "natives": "1.1.6",
-    "angular": "1.5.9",
+    "angular": "1.8.2",
     "angular-ui-bootstrap": "0.13.0",
     "angular-chart.js": "1.1.1",
     "angular-cookies": "1.5.8",
@@ -54,21 +54,21 @@
     "angular-i18n": "1.4.5",
     "angular-resource": "1.3.15",
     "angular-sanitize": "1.3.15",
-    "angular-translate": "2.11.1",
-    "angular-translate-handler-log": "2.11.1",
-    "angular-translate-loader-static-files": "2.11.1",
-    "angular-translate-storage-cookie": "2.11.1",
-    "angular-translate-storage-local": "2.11.1",
+    "angular-translate": "2.19.0",
+    "angular-translate-handler-log": "2.19.0",
+    "angular-translate-loader-static-files": "2.19.0",
+    "angular-translate-storage-cookie": "2.19.0",
+    "angular-translate-storage-local": "2.19.0",
     "angular-ui-notification": "0.3.6",
     "ui-select": "0.18.1",
-    "bootstrap": "3.3.4",
+    "bootstrap": "3.4.1",
     "chart.js": "2.7.0",
     "cpf_cnpj": "0.2.0",
     "font-awesome": "4.4.0",
     "jquery": "3.5.1",
     "justgage": "1.3.5",
-    "moment": "2.9.0",
-    "moment-timezone": "0.4.0",
+    "moment": "2.29.1",
+    "moment-timezone": "0.5.33",
     "ng-file-upload": "12.2.13"
   }
 }
