CRONAPP-4723 - menu web

--- a/components/crn-dynamic-menu.components.json
+++ b/components/crn-dynamic-menu.components.json
@@ -11,7 +11,7 @@
     "LAYOUTS"
   ],
   "order": 11,
-  "wrapper": false,
+  "wrapper": true,
   "designTimeDynamic": true,
   "designTimeHTMLURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/cron-dynamic-menu.designtime.html",
   "designTimeSelector": ":self",
