--- a/components/crn-rating.components.json
+++ b/components/crn-rating.components.json
@@ -9,11 +9,8 @@
     "BUTTONS"
   ],
   "wrapper": false,
-  "forcedGroup": true,
-  "designTimeHTMLURL": "src/main/webapp/node_modules/cronapp-framework-js/components/templates/rating.designtime.html",
-  "designTimeSelector": "cronapp-rating",
-  "designTimeDynamic": true,
-  "templateURL": "src/main/webapp/node_modules/cronapp-framework-js/components/templates/rating.template.html",
+  "autoWrapper": false,
+  "templateURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/rating.template.html",
   "properties": {
     "id": {
       "order": 1
@@ -55,11 +52,6 @@
       "type": "options",
       "target": "class",
       "values": [
-        {
-          "key": "color-theme",
-          "value_pt_BR": "Padrão do tema",
-          "value_en_US": "Theme pattern"
-        },
         {
           "key": "color-white",
           "value_pt_BR": "Branco",
@@ -191,27 +183,27 @@
     {
       "name": "icon-size",
       "type": "options",
-      "target": "class",
+      "target": "style",
       "values": [
         {
-          "key": "font-size-theme",
-          "value_pt_BR": "Padrão do tema",
-          "value_en_US": "Theme pattern"
+          "key": "font-size: 20px;",
+          "value_pt_BR": "Padrão",
+          "value_en_US": "Default"
         },
         {
-          "key": "font-size-20",
-          "value_pt_BR": "Pequeno",
-          "value_en_US": "Small"
+          "key": "font-size: 47px;",
+          "value_pt_BR": "Grande",
+          "value_en_US": "Big"
         },
         {
-          "key": "font-size-30",
+          "key": "font-size: 30px;",
           "value_pt_BR": "Médio",
           "value_en_US": "Medium"
         },
         {
-          "key": "font-size-47",
-          "value_pt_BR": "Grande",
-          "value_en_US": "Big"
+          "key": "font-size: 25px;",
+          "value_pt_BR": "Pequeno",
+          "value_en_US": "Small"
         }
       ]
     }
@@ -235,6 +227,18 @@
       "order": 2
     },
     {
+      "name": "icon-theme",
+      "selector": "i",
+      "displayName_pt_BR": "Cor do ícone",
+      "displayName_en_US": "Icon color"
+    },
+    {
+      "name": "icon-size",
+      "displayName_pt_BR": "Tamanho do ícone",
+      "displayName_en_US": "Icon size",
+      "selector": "i"
+    },
+    {
       "name": "icon-off",
       "selector": "cronapp-rating",
       "displayName_pt_BR": "Ícone Inativo",
@@ -243,16 +247,10 @@
       "order": 2
     },
     {
-      "name": "data-theme",
-      "selector": "i",
-      "displayName_pt_BR": "Cor do ícone",
-      "displayName_en_US": "Icon color"
-    },
-    {
-      "name": "data-size",
-      "displayName_pt_BR": "Tamanho do ícone",
-      "displayName_en_US": "Icon size",
-      "selector": "i"
+      "name": "xattr-theme",
+      "selector": "div",
+      "type": "text",
+      "order": 3
     },
     {
       "name": "xattr-default-value",
