--- a/components/crn-upload-file.components.json
+++ b/components/crn-upload-file.components.json
@@ -53,8 +53,9 @@
       "values": [
         {
           "key": "btn-default",
-          "value_pt_BR": "Padrão do tema",
-          "value_en_US": "Theme pattern"
+          "value_pt_BR": "Padrão",
+          "value_en_US": "Default",
+          "color": "#fff"
         },
         {
           "key": "btn-primary",
