--- a/components/crn-textinputbutton.components.json
+++ b/components/crn-textinputbutton.components.json
@@ -35,7 +35,7 @@
       "text_en_US": "Placeholder"
     },
     {
-      "selector": "div#{id} button",
+      "selector": "div#{id} button, div#{id} button i, div#{id} button span",
       "text_pt_BR": "Botão",
       "text_en_US": "Button"
     }
