--- a/components/crn-chart.components.json
+++ b/components/crn-chart.components.json
@@ -9,6 +9,7 @@
     "LAYOUTS", "FORMS"
   ],
   "wrapper": false,
+  "forcedGroup": true,
   "templateURL": "src/main/webapp/node_modules/cronapp-framework-js/dist/components/templates/chart.template.html",
   "designTimeHTML": "<img style=\"height: 100%;width:100%;min-height:100%; min-width:100%;\"  src=\"node_modules/cronapp-framework-js/img/svg-charts.svg\"/>",
   "designTimeSelector": "canvas",
