--- a/components/crn-ordered-sub-list.components.json
+++ b/components/crn-ordered-sub-list.components.json
@@ -2,8 +2,7 @@
     "name": "crn-ordered-sub-list",
     "text_pt_BR": "Sub lista ordenada",
     "text_en_US": "Ordered sub list",
-    "wrapper": false,
-    "autoWrapper": true,
+    "wrapper": true,
     "image": "/node_modules/cronapp-framework-js/img/cron-icon/crn-ordered-sub-list.svg",
     "description": "Sublista de segundo grau com indicadores numerados",
     "description_en_US": "Second degree sublist with numbered indicators",
